filepath updates for privapps

--- a/atac_edgeR_report.Rmd
+++ b/atac_edgeR_report.Rmd
@@ -53,6 +53,10 @@ if (exists("params") && !is.null(params$params_file)) {
   #report_params <- parse_params("/blue/cancercenter-dept/PIPELINES/REPORTING/atacseq_report_module/param_files/testing/NS4167_Male_GoodSamples_params.txt")
   stop("params$params_file is not available. This Rmd must be run with a params file.")
 }
+resolved_seq_dir <- Sys.glob(file.path("/blue/cancercenter-dept/privapps/data/atac", "*", report_params$seqID))[1]
+if (is.na(resolved_seq_dir) || !dir.exists(resolved_seq_dir)) {
+  stop("ATAC directory for seqID not found: ", report_params$seqID)
+}
 ```
 
 # Project Summary
